--- a/css/style.css
+++ b/css/style.css
@@ -39,11 +39,21 @@
 }
 
 @font-face {
+  font-family: 'Century Gothic';
+  src: local('Century Gothic Bold'), local('Century-Gothic-Bold'),
+    url('../fonts/CenturyGothic-Bold.woff2') format('woff2'),
+    url('../fonts/CenturyGothic-Bold.woff') format('woff'),
+    url('../fonts/CenturyGothic-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
   font-family: 'Muller';
   src: local('Muller Regular'), local('Muller-Regular'),
-      url('../fonts/MullerRegular.woff2') format('woff2'),
-      url('../fonts/MullerRegular.woff') format('woff'),
-      url('../fonts/MullerRegular.ttf') format('truetype');
+    url('../fonts/MullerRegular.woff2') format('woff2'),
+    url('../fonts/MullerRegular.woff') format('woff'),
+    url('../fonts/MullerRegular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
 }
@@ -51,9 +61,9 @@
 @font-face {
   font-family: 'Muller';
   src: local('Muller Ultra Light'), local('Muller-Ultra-Light'),
-      url('../fonts/MullerUltraLight.woff2') format('woff2'),
-      url('../fonts/MullerUltraLight.woff') format('woff'),
-      url('../fonts/MullerUltraLight.ttf') format('truetype');
+    url('../fonts/MullerUltraLight.woff2') format('woff2'),
+    url('../fonts/MullerUltraLight.woff') format('woff'),
+    url('../fonts/MullerUltraLight.ttf') format('truetype');
   font-weight: 200;
   font-style: normal;
 }
@@ -91,6 +101,8 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
+
+  font-family: var(--family-gotham);
 }
 
 .btn.bg_gold_color {
@@ -134,6 +146,7 @@ button {
   width: 100%;
   top: 0;
   left: 0;
+  z-index: 2;
 
   background: var(--color-black);
 }
@@ -185,7 +198,7 @@ button {
 
 .header.active .burger__line:nth-child(2) {
   transform: scaleX(-1);
-    opacity: 0;
+  opacity: 0;
 }
 
 .header.active .burger__line:nth-child(3) {
@@ -579,10 +592,10 @@ button {
   justify-content: center;
 
   margin-bottom: -44px;
-    margin-left: 16px;
+  margin-left: 16px;
 
-    position: relative;
-    z-index: 1;
+  position: relative;
+  z-index: 1;
 }
 
 .models-card__image-stavka {
@@ -705,6 +718,663 @@ button {
 /*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
 /*================ $CREDIT STYLE ===============*/
 
+.credit__upper {
+  padding: 100px 0 50px;
+}
+
+
+.credit__container {
+  background: url(../img/credit_mob.webp)no-repeat;
+  background-size: cover;
+  background-position: center;
+
+  padding-top: 219px;
+}
+
+.credit__title-banner {
+  font-family: var(--family-oks);
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 32px;
+  text-transform: uppercase;
+  color: var(--color-gold);
+
+  margin-bottom: 20px;
+}
+
+.credit__list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.credit__list-item {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+
+  font-family: var(--family-gothic);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  color: var(--color-white);
+}
+
+.credit__line-text_color_gold {
+  color: var(--color-gold);
+}
+
+.credit__line {
+  width: 27px;
+  height: 1px;
+
+  background: var(--color-gold);
+
+  margin-left: -16px;
+
+  display: block;
+}
+
+.banner__form {
+  margin-top: 20px;
+}
+
+.banner__form-flex {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.banner__form-input {
+  width: 100%;
+  height: 32px;
+
+  border: 1px solid var(--color-white);
+
+  background: none;
+
+  padding-left: 20px;
+
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 15px;
+  color: var(--color-white);
+}
+
+.banner__form-input::placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 15px;
+  color: var(--color-white);
+}
+
+.banner__form-button {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 15px;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--color-white);
+
+  height: 32px;
+}
+
+.form-checkbox label {
+  display: flex;
+  align-items: flex-start;
+  gap: 8px;
+
+  margin-top: 10px;
+
+  width: 100%;
+}
+
+.form__input-check[type=checkbox] {
+  position: absolute;
+  left: 0;
+  opacity: 0;
+  z-index: 2;
+}
+
+.form__input-check[type=checkbox]+.custom-checkbox {
+  display: block;
+
+  width: 11px;
+  height: 11px;
+
+  background: none;
+
+  border: 1px solid var(--color-white);
+  border-radius: 50%;
+}
+
+.form__input-check[type=checkbox]:checked+.custom-checkbox {
+  background-image: url(../img/ball-check.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 3px;
+}
+
+
+.checkbox-text {
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 10px;
+  color: var(--color-white);
+}
+
+.checkbox-text a {
+  color: var(--color-white);
+}
+
+.credit__lines {
+  display: none;
+}
+
+/*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*/
+
+
+/*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+/*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+/*================ $EQUIP STYLE ===============*/
+
+.equip__upper {
+  padding: 110px 0 50px;
+}
+
+.equip__filter {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.select2-container--default .select2-selection--single {
+  height: 39px;
+
+  background: none;
+  border: none;
+  border-radius: 0;
+  border-bottom: 1px solid var(--color-gold);
+
+  position: relative;
+
+  display: flex;
+  align-items: center;
+}
+
+.select2-container--default .select2-selection--single::before {
+  content: "";
+
+  display: block;
+
+  width: 1px;
+  height: 39px;
+
+  background: rgb(191, 144, 108);
+  background: linear-gradient(0deg, rgba(191, 144, 108, 1) 0%, rgba(191, 144, 108, 0) 100%);
+
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
+.select2-container--default .select2-selection--single::after {
+  content: "";
+
+  display: block;
+
+  width: 1px;
+  height: 39px;
+
+  background: rgb(191, 144, 108);
+  background: linear-gradient(0deg, rgba(191, 144, 108, 1) 0%, rgba(191, 144, 108, 0) 100%);
+
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__arrow b {
+  border: none;
+
+  width: 20px;
+  height: 11px;
+
+  background: url(../img/arrow-select.svg)no-repeat;
+
+  top: 16px;
+  left: auto;
+  right: 20px;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+  padding-left: 20px;
+
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 17px;
+  color: var(--color-gold);
+}
+
+.select2-container--open .select2-dropdown--below,
+.select2-container--open .select2-dropdown--above {
+  background: var(--color-black);
+
+  border: 1px solid var(--color-gold);
+}
+
+.select2-container--default .select2-results__option--highlighted.select2-results__option--selectable {
+  background: var(--color-gold);
+}
+
+.select2-results__option {
+  color: var(--color-gold);
+
+  font-size: 14px;
+  line-height: 16px;
+
+  padding: 10px 20px;
+}
+
+.equip__list {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+
+  margin-top: 50px;
+}
+
+.equip-card__img {
+  width: 100%;
+}
+
+.equip-card__info {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+
+  margin-top: 11px;
+}
+
+.equip-card__head {
+
+  font-family: var(--family-oks);
+  font-weight: 400;
+  font-size: 70px;
+  line-height: 70px;
+  text-transform: uppercase;
+  color: var(--color-gold);
+}
+
+.equip-card__name {
+  font-family: var(--family-gothic);
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 29px;
+  color: var(--color-white);
+}
+
+.equip-card__prices {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+
+  margin-top: 40px;
+}
+
+.equip-card__prices-flex {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.equip-card__prices-old {
+  font-family: var(--family-gothic);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  text-decoration-line: line-through;
+  color: var(--color-white);
+}
+
+.equip-card__prices-new {
+  font-family: var(--family-gothic);
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 29px;
+  color: var(--color-white);
+}
+
+.equip-card__prices-month {
+  font-family: var(--family-gothic);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  color: var(--color-gold);
+}
+
+.equip-card__btns {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
+  margin-top: 15px;
+}
+
+.equip-card__button {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 13px;
+  text-align: right;
+  text-transform: uppercase;
+  color: var(--color-white);
+
+  height: 41px;
+}
+
+.equip-card__button.bg_gray_color {
+  background: var(--color-gray);
+}
+
+/*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*/
+
+
+/*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+/*^^^^^^^^^^^^^^^^^^^^^0^^^^^^^^^^^^^^^^^^^^^^^*/
+/*================ $TRADE STYLE ===============*/
+
+.trade__upper {
+  padding: 100px 0 50px;
+}
+
+.trade__container {
+  background: url(../img/trade_mob.webp)no-repeat;
+  background-size: cover;
+  background-position: center;
+
+  padding-top: 297px;
+}
+
+.trade__title-banner {
+  font-family: var(--family-oks);
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 32px;
+  text-transform: uppercase;
+  color: var(--color-gold);
+
+  margin-bottom: 10px;
+}
+
+.trade__info-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 15px;
+  color: var(--color-white);
+
+  display: block;
+}
+
+.trade__info-text b {
+  font-weight: bold;
+}
+
+/*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*/
+
+
+/*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+/*^^^^^^^^^^^^^^^^^^^^^0^^^^^^^^^^^^^^^^^^^^^^^*/
+/*================ $CONTACTS STYLE ===============*/
+
+.contacts {
+  padding-bottom: 100px;
+}
+
+.contacts__upper {
+  padding: 110px 0 50px;
+}
+
+.contacts__map {
+  width: 100%;
+
+  display: block;
+}
+
+.contacts__info {
+  background: var(--color-gray);
+  box-shadow: 0px 0px 134px rgba(139, 139, 139, 0.25);
+
+  padding: 60px 37px;
+
+}
+
+.contacts__list {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.contacts__list-item,
+.contacts__link {
+  display: flex;
+  align-items: center;
+  gap: 19px;
+
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 15px;
+  text-decoration: none;
+  color: var(--color-white);
+}
+
+/*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*/
+
+/*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+/*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+/*================ $FOOTER STYLE ===============*/
+
+.footer {
+
+  border-top: 1px solid var(--color-gold);
+
+  padding: 30px 16px;
+}
+
+.footer__info-link {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.footer__link,
+.footer__info-text {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 11px;
+  color: var(--color-white);
+  text-decoration: none;
+}
+
+.footer__link {
+  color: var(--color-gold);
+}
+
+.footer__info-flex {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.footer__info {
+  margin-top: 26px;
+
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+/*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*/
+
+/*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+/*^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^*/
+/*================ $POP-UP STYLE ===============*/
+
+.pop-up {
+  display: none;
+
+  width: 98%;
+
+  padding: 20px;
+}
+
+.pop-up__info {
+  display: flex;
+  flex-direction: column;
+  gap: 33px;
+}
+
+.pop-up__head {
+  font-family: var(--family-oks);
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 32px;
+  color: var(--color-white);
+
+  display: block;
+}
+
+.pop-up__info-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 15px;
+  color: var(--color-white);
+
+  display: block;
+}
+
+.pop-up__info-text b {
+  font-weight: bold;
+}
+
+.pop-up__form-flex {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.pop-up__form-input {
+  width: 100%;
+  height: 40px;
+
+  background: none;
+
+  padding-left: 20px;
+
+  border: 1px solid var(--color-white);
+
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 15px;
+  color: var(--color-white);
+}
+
+.pop-up__form-input::placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 15px;
+  color: var(--color-white);
+}
+
+.pop-up__button {
+  height: 40px;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 15px;
+  text-transform: uppercase;
+}
+
+.pop-up .f-button {
+  background: none;
+}
+
+.pop-up .f-button svg {
+  stroke: var(--color-white);
+}
+
+.pop-up__list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.pop-up__list-item {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 15px;
+  color: var(--color-white);
+}
+
+.pop-up__list-item b {
+  font-weight: bold;
+}
+
+#popupCall {
+  background: url(../img/pop-up_call_mob.webp)no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+#popupCredit {
+  background: url(../img/pop-up_credit_mob.webp)no-repeat;
+  background-size: cover;
+  background-position: center;
+
+  padding: 20px 17px 20px 20px;
+}
+
+#popupCredit .pop-up__head {
+  font-size: 28px;
+  line-height: 28px;
+}
+
+#popupCall .pop-up__form {
+  margin-top: 149px;
+}
+
+#popupCredit .pop-up__info {
+  gap: 20px;
+}
+
+#popupSus .pop-up__info {
+  gap: 30px;
+}
+
+#popupCredit .pop-up__form {
+  margin-top: 118px;
+}
+
+#popupSus {
+  background: url(../img/pop-up_sus_mob.webp)no-repeat;
+  background-size: cover;
+  background-position: center;
+
+  padding: 30px 20px 290px;
+}
+
+#popupSus2 {
+  background: url(../img/pop-up_sus2_mob.webp)no-repeat;
+  background-size: cover;
+  background-position: center;
+
+  padding: 30px 20px 290px;
+}
+
+#popupSus .pop-up__info,
+#popupSus2 .pop-up__info {
+  gap: 20px;
+}
+
 
 /*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*|*/
 
@@ -718,6 +1388,10 @@ button {
   .models-card__prices-month {
     font-size: 18px;
     line-height: 17px;
+  }
+
+  .pop-up {
+    width: 340px;
   }
 }
 
@@ -741,5 +1415,13 @@ button {
 
   .models-card {
     width: 400px;
+  }
+
+  .credit__container {
+    padding-top: calc(100% - 362px);
+  }
+
+  .banner__form {
+    width: 407px;
   }
 }
