--- a/css/style.css
+++ b/css/style.css
@@ -1069,6 +1069,8 @@ button {
   position: relative;
 
   display: none;
+
+  overflow: hidden;
 }
 
 .pop-up__img {
@@ -1112,10 +1114,15 @@ button {
   color: var(--color-white);
 
   display: block;
+
+  width: 194px;
 }
 
 .pop-up__form {
-  margin-top: 73px;
+  margin-top: 85px;
+
+  position: relative;
+  z-index: 1;
 }
 
 .pop-up__form-inputs {
@@ -1160,7 +1167,97 @@ button {
   border-radius: 10px;
 }
 
+.pop-up__ball {
+  position: absolute;
+  top: -281px;
+  left: -63px;
+  width: 429px;
+  height: 429px;
+  background: red;
+  border-radius: 50%;
+  z-index: -1;
+
+  background: var(--color-black);
+}
+
+.is-close-btn {
+  background: none;
+}
+
+.is-compact .fancybox__content>.f-button.is-close-btn {
+  opacity: 1;
+  top: 0;
+  right: -4px;
+}
+
+#popupSus  .f-button svg {
+  stroke: var(--color-black);
+}
+
+#popupSus {
+  background: url(../img/popup-sus_mob.webp)no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+#popupAll {
+  background: url(../img/popup-al_mob.webp)no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+#popupSus,
+#popupAll {
+  height: 327px;
+
+  padding: 20px 10px;
+}
+
+.head_color_black {
+  color: var(--color-black);
+}
+
+.head_color_white {
+  color: var(--color-white);
+}
+
+#popupSus .pop-up__head {
+  margin-bottom: 10px;
+}
+
+#popupSus .pop-up__sub-head {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+  color: var(--color-black);
+  text-transform: inherit;
+
+  width: 231px;
+}
+
+#popupAll .pop-up__head {
+  font-size: 22px;
+  line-height: 25px;
+
+  margin-bottom: 8px;
+}
+
+#popupAll .pop-up__sub-head {
+  font-weight: 400;
+
+  text-transform: inherit;
+  width: 284px;
+}
+
+
+
 /*======================================*/
+
+@media screen and (min-width: 360px) {
+  .pop-up {
+    width: 340px;
+  }
+}
 
 
 @media screen and (min-width: 450px) {
