--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,51 @@ body {
 }
 
 /**************************************/
+/*========= $SWIPER DEFAULT style =========*/
+
+.swiper {
+    width: 100%;
+    height: 300px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.swiper-slide {
+    background-size: cover;
+    background-position: center;
+}
+
+.swiper-img {
+    height: 80%;
+    width: 100%;
+}
+
+.swiper-prev {
+    height: 20%;
+    box-sizing: border-box;
+    padding: 10px 0;
+}
+
+.swiper-prev .swiper-slide {
+    width: 25%;
+    height: 100%;
+    opacity: 0.4;
+}
+
+.swiper-prev .swiper-slide-thumb-active {
+    opacity: 1;
+}
+
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/*___________________________________*/
+
+/**************************************/
 /*========= $HEADER style =========*/
 
 .header {
@@ -523,8 +568,45 @@ body {
 /**************************************/
 /*========= $MODELS style =========*/
 
-.models {
-    /* background: linear-gradient(0deg, #87B4DE 0%, #292D36 100%); */
+.models {}
+
+.models__list {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.models__card-top {
+    display: flex;
+    flex-direction: column;
+    gap: 23px;
+}
+
+.models__card-name {
+    font-size: 20px;
+    line-height: 22px;
+    font-weight: 800;
+    text-transform: uppercase;
+    color: var(--color-white);
+}
+
+.models__card-name_color {
+    color: var(--color-blue);
+}
+
+.models__card-equip {
+    display: flex;
+    align-items: center;
+    gap: 13px;
+
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 500;
+    color: var(--color-white);
+    text-transform: uppercase;
+    text-decoration: none;
+
+    margin-bottom: 23px;
 }
 
 /*___________________________________*/
