--- a/css/desk-style.css
+++ b/css/desk-style.css
@@ -183,11 +183,144 @@
     padding: 152px 0 130px;
 }
 
+.models__card {
+    width: 100%;
+
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+.models__card-top.deks_hide {
+    display: none;
+}
+
+.models__card-top.mob_hide {
+    display: flex;
+}
+
+.models__card-top {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+
+    margin-bottom: 25px;
+}
+
+.models__card-equip {
+    margin-bottom: 0;
+
+    font-size: 16px;
+    line-height: 18px;
+}
+
+.models__card-name {
+    font-size: 48px;
+    line-height: 50px;
+}
+
+.models__card-swipers {
+    width: 779px;
+}
+
+.models__card-info {
+    flex-basis: 45%;
+}
+
+.models__card-btns {
+    flex-direction: row;
+    gap: 15px;
+}
+
+.models__card-actions {
+    gap: 18px;
+}
+
+.models__card-item {
+    font-size: 16px;
+    line-height: 18px;
+}
+
+.models__card-prices {
+    gap: 15px;
+
+    margin: 52px 0 50px;
+
+    flex-direction: column-reverse;
+}
+
+.models__card-month {
+    font-size: 32px;
+    line-height: 34px;
+}
+
+.models__card-price {
+    font-size: 48px;
+    line-height: 50px;
+}
+
+.models__card-prev {
+    height: 412px;
+    width: 157px;
+
+    padding: 12px 10px;
+
+    right: auto;
+    left: -57px;
+    top: 45px;
+    bottom: auto;
+}
+
+.swiper-prev {
+    height: 100%;
+}
+
+.swiper-prev .swiper-slide {
+    width: 100%;
+}
+
+.models__card-colors-info {
+    padding: 30px 0 0;
+}
+
+/* .swiper-prev {
+    height: 100%;
+    width: 137px;
+}
+
+.swiper-prev .swiper-wrapper {
+    flex-direction: column;
+} */
+
+/*___________________________________*/
+
+
+/**************************************/
+/*========= $EQUIPMENT style =========*/
+
+.equipment__upper {
+    padding: 130px 0 153px;
+}
+
 /*___________________________________*/
 
 
 
-@media screen and (max-width: 1600px) {}
+@media screen and (max-width: 1650px) {
+    .models__card-swipers {
+        width: 680px;
+    }
+
+    .models__card-info {
+        flex-basis: 52%;
+    }
+
+    .models__card-prev {
+        left: -13px;
+
+        height: 389px;
+    }
+}
 
 @media screen and (max-width: 1536px) {
     .container {
@@ -211,6 +344,24 @@
         line-height: 65px;
     }
 
+    .models__card-prev {
+        left: -30px;
+    }
+
+    .models__card-info {
+        flex-basis: 40%;
+    }
+
+    .models__card-name {
+        font-size: 34px;
+        line-height: 36px;
+    }
+
+    .models__card-equip {
+        font-size: 14px;
+        line-height: 16px;
+    }
+
 }
 
 @media screen and (max-width: 1280px) {
@@ -224,6 +375,35 @@
 
     .main-banner__bg {
         max-width: 600px;
+    }
+
+    .models__card-prev {
+        width: 127px;
+        height: 358px;
+        top: 7px;
+        left: -10px;
+    }
+
+    .models__card-swipers {
+        width: 555px;
+    }
+
+    .models__card-price {
+        font-size: 40px;
+        line-height: 42px;
+    }
+
+    .models__card-item {
+        font-size: 14px;
+        line-height: 16px;
+    }
+
+    .models__card-prices {
+        margin: 13px 0 16px;
+    }
+
+    .models__card-info {
+        flex-basis: 42%;
     }
 }
 
