--- a/css/desk-style.css
+++ b/css/desk-style.css
@@ -1,3 +1,1063 @@
 .container {
-    padding: ;
+    padding: 0;
+    margin-left: calc(30% - 276px);
+
+    max-width: 1320px;
+}
+
+.container-custom {
+    margin-left: calc(30% - 276px);
+    padding: 45px 0 45px 40px;
+
+    background: var(--color-main);
+}
+
+.section__title {
+    font-size: 80px;
+    line-height: 82px;
+}
+
+.section__upper {
+    padding: 0;
+
+    background: none;
+}
+
+
+/**************************************/
+/*========= $HEADER style =========*/
+
+.header__img {
+    max-width: 86px;
+}
+
+.header__container {
+    padding: 22px 0;
+}
+
+.burger {
+    display: none;
+}
+
+.header__number {
+    display: none;
+}
+
+.header__menu {
+    position: static;
+    background: none;
+    padding: 0;
+
+    flex-basis: 53%;
+}
+
+.header__menu-bottom {
+    display: none;
+}
+
+.header__nav {
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.header__btn {
+    display: block;
+    flex-basis: 14%;
+}
+
+.header__info {
+    display: flex;
+    flex-direction: column;
+    gap: 13px;
+}
+
+.header__info-item {
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 400;
+    color: var(--color-white);
+    text-decoration: none;
+
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.header__nav-link {
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 400;
+}
+
+.header__button {
+    font-size: 16px;
+    line-height: 18px;
+
+    height: 36px;
+
+    margin-top: 0;
+}
+
+.header__line {
+    height: 2px;
+    width: calc(85% + 15px);
+
+    background: var(--color-white);
+
+    margin-left: auto;
+}
+
+/*___________________________________*/
+
+
+/**************************************/
+/*========= $MAIN-BANNER style =========*/
+
+.main-banner {
+    background: url(../img/main-banner_desk.webp)no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    aspect-ratio: 1920/1050;
+
+    padding-top: 178px;
+}
+
+.main-banner__title {
+    font-size: 48px;
+    line-height: 50px;
+    font-weight: 700;
+
+    text-align: left;
+}
+
+.main-banner__flex {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+
+    margin-top: 29px;
+}
+
+.main-banner__discount {
+    width: 505px;
+
+    margin: 0;
+
+    font-size: 48px;
+    line-height: 50px;
+}
+
+.main-banner__timer {
+    padding-bottom: 19px;
+}
+
+.main-banner__info {
+    width: 505px;
+
+    margin: 0;
+
+    padding: 28px 0 23px;
+
+    position: relative;
+    z-index: 2;
+}
+
+.time-count__val {
+    font-size: 60px;
+    line-height: 62px;
+}
+
+.time-count__text {
+    font-size: 20px;
+    line-height: 22px;
+}
+
+.main-banner__form {
+    padding: 0 44px;
+}
+
+.main-banner__form-input {
+    height: 57px;
+}
+
+.main-banner__form-button {
+    font-size: 28px;
+    line-height: 30px;
+
+    height: 63px;
+
+    margin-top: 23px;
+}
+
+.main-banner__img.mob_hide {
+    display: block;
+}
+
+.main-banner__img.desk_hide {
+    display: none;
+}
+
+.main-banner__img {
+    left: 0;
+    width: 100%;
+    max-width: none;
+    transform: none;
+}
+
+.main-banner__actions {
+    width: 100%;
+
+    padding: 0;
+    border-radius: 0;
+
+    background: none;
+
+    bottom: 30px;
+}
+
+.main-banner__actions-cont {
+    position: relative;
+
+    padding: 17px 0 13px;
+}
+
+.main-banner__actions-cont::before {
+    content: "";
+
+    display: block;
+
+    height: 100%;
+    width: 761px;
+
+    background: var(--color-white);
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    border-radius: 0px 10px 10px 0px;
+}
+
+.main-banner__actions-list {
+    position: relative;
+}
+
+.main-banner__actions-item {
+    font-size: 25px;
+    line-height: 27px;
+}
+
+/*___________________________________*/
+
+
+/**************************************/
+/*========= $MODELS style =========*/
+
+.models__card {
+    width: auto;
+
+    padding-bottom: 0;
+}
+
+.models__card-flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+
+    padding-left: 45px;
+}
+
+.models__card-info {
+    margin-top: 0;
+    padding-bottom: 25px;
+
+    flex-basis: 41%;
+}
+
+.models__card-bg {
+    width: auto;
+    height: 100%;
+    object-position: right;
+    left: auto;
+    right: 0;
+}
+
+.models__card-head {
+    font-size: 60px;
+    line-height: 62px;
+}
+
+.models__card-price {
+    font-size: 28px;
+    line-height: 30px;
+
+    margin-top: 0;
+}
+
+.models__card-img {
+    max-width: 605px;
+}
+
+.models__card-price::before {
+    width: 275px;
+}
+
+.models__card-price::after {
+    content: "";
+
+    display: block;
+
+    width: 26px;
+    height: 100%;
+
+    background: var(--color-white);
+    /* filter: drop-shadow(0px 4px 17px rgba(0, 0, 0, 0.25)); */
+
+    position: absolute;
+    top: 0;
+    left: -37px;
+}
+
+.models__card-credit {
+    width: 97px;
+    height: 97px;
+
+    top: 106px;
+}
+
+.models__card-ball {
+    width: 89px;
+    height: 89px;
+}
+
+.models__card-ball b {
+    font-size: 31px;
+    line-height: 33px;
+}
+
+.models__card-actions {
+    padding: 20px 0 15px 11px;
+}
+
+.models__card-item {
+    gap: 9px;
+
+    font-size: 28px;
+    line-height: 30px;
+}
+
+.models__card-link {
+    font-size: 26px;
+    line-height: 28px;
+
+    margin: 26px 0 28px;
+}
+
+.models__card-btns {
+    gap: 14px;
+}
+
+.models__card-button {
+    height: 63px;
+
+    font-size: 28px;
+    line-height: 30px;
+}
+
+.models__card-actions::before {
+    width: 86px;
+}
+
+.models__card-actions::after {
+    width: 100%;
+
+    right: 0;
+}
+
+.models__card-car::before {
+    left: 75px;
+
+    width: 81%;
+}
+
+.models__card-price {
+    margin-left: 45px;
+}
+
+
+/*___________________________________*/
+
+
+/**************************************/
+/*========= $EQUIPMENT style =========*/
+
+.equipment {
+    background: none;
+}
+
+.equipment__container {
+    margin-top: 0;
+
+    background: var(--color-main);
+
+    margin-left: calc(30% - 276px);
+}
+
+.equipment__card {
+    width: 100%;
+
+    padding: 0;
+}
+
+.equipment__cards {
+    padding-top: 43px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 43px;
+}
+
+.equipment__card:first-child {
+    padding: 0;
+}
+
+.equipment__card .container {
+    margin-left: 0;
+}
+
+.equipment__flex {
+    display: flex;
+    justify-content: space-between;
+
+    padding-left: 45px;
+}
+
+.equipment__card-bg {
+    width: auto;
+    height: 100%;
+
+    left: auto;
+    right: 0;
+}
+
+.equipment__head {
+    font-size: 40px;
+    line-height: 42px;
+}
+
+.equipment__info {
+    flex-basis: 34%;
+
+    margin-top: 39px;
+}
+
+.equipment__head::before {
+    height: 3px;
+    width: calc(186% - 153px);
+
+    right: auto;
+    left: -45px;
+
+    background: #EAEAEA;
+}
+
+.equipment__spec-head {
+    border-radius: 0;
+
+    font-size: 30px;
+    line-height: 32px;
+
+    height: 53px;
+}
+
+.equipment__spec-item {
+    height: 38px;
+
+    font-size: 18px;
+    line-height: 20px;
+}
+
+.equipment__card-button {
+    height: 59px;
+
+    font-size: 28px;
+    line-height: 30px;
+}
+
+.equipment__car-img img {
+    max-width: 563px;
+}
+
+.filter {
+    justify-content: space-evenly;
+}
+
+.filter__select {
+    flex-basis: 28%;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+    font-size: 20px;
+    line-height: 22px;
+}
+
+/*___________________________________*/
+
+
+/**************************************/
+/*========= $BANNERS style =========*/
+
+.banner__bg {
+    padding: 27px 0 21px;
+}
+
+.banner__info {
+    width: 45%;
+}
+
+.banner__head {
+    font-size: 32px;
+    line-height: 34px;
+
+    padding: 0;
+}
+
+.banner__list {
+    margin-top: 10px;
+
+    padding: 14px 0 17px 32px;
+
+    gap: 9px;
+}
+
+.banner__list-item {
+    gap: 12px;
+
+    font-size: 25px;
+    line-height: 27px;
+}
+
+.banner__form {
+    margin-top: 16px;
+}
+
+.form__inputs {
+    gap: 10px;
+}
+
+.banner__form-input {
+    height: 45px;
+
+    font-size: 18px;
+    line-height: 20px;
+
+    padding-left: 16px;
+}
+
+.banner__form-input::placeholder {
+    font-size: 18px;
+    line-height: 20px;
+}
+
+.banner__form-button {
+    margin-top: 13px;
+
+    height: 54px;
+
+    font-size: 28px;
+    line-height: 30px;
+}
+
+.banner__form {
+    width: 509px;
+}
+
+.banner__list::after {
+    right: auto;
+    left: 0;
+
+    width: calc(115% - 16px);
+}
+
+.trade .banner__info {
+    width: 46%;
+}
+
+/*___________________________________*/
+
+
+/**************************************/
+/*========= $CONTACTS style =========*/
+
+.contacts__container {
+    margin-left: calc(30% - 276px);
+}
+
+.contacts__list {
+    flex-direction: row;
+    gap: 42px;
+}
+
+.contacts__info {
+    padding: 32px 0 32px 45px;
+
+    position: relative;
+
+    background: var(--color-white);
+}
+
+.contacts__info::before {
+    content: "";
+
+    display: block;
+
+    width: 20px;
+    height: 100%;
+
+    position: absolute;
+    left: 0;
+    top: 0;
+
+    box-shadow: 0px 4px 11px 0px rgba(0, 0, 0, 0.25);
+    background: var(--color-white);
+
+    z-index: -1;
+}
+
+/*___________________________________*/
+
+
+/**************************************/
+/*========= $FOOTER style =========*/
+
+.footer {
+    padding: 25px 0 27px;
+}
+
+.footer__info-address {
+    font-size: 15px;
+    line-height: 17px;
+    text-align: left;
+}
+
+.footer__info {
+    font-size: 15px;
+    line-height: 17px;
+    text-align: left;
+}
+
+.footer__info-text {
+    font-size: 15px;
+    line-height: 17px;
+    text-align: left;
+}
+
+.footer__list {
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+.footer__link {
+    font-size: 15px;
+    line-height: 17px;
+}
+
+.footer__line {
+    width: 100%;
+    margin: 7px 0 6px 0;
+}
+
+/*___________________________________*/
+
+
+/**************************************/
+/*========= $POP-UP style =========*/
+
+.pop-up {
+    width: 970px;
+}
+
+.pop-up__info-img {
+    display: none;
+}
+
+#modalCredit {
+    background: url(../img/modal-credit_desk.webp)no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+#modalCredit .pop-up__info {
+    padding: 47px 41px 19px;
+}
+
+#modalCredit .pop-up__head {
+    font-size: 60px;
+    line-height: 62px;
+    text-align: left;
+}
+
+#modalCredit .pop-up__sub-head {
+    font-size: 25px;
+    line-height: 27px;
+    text-transform: uppercase;
+    text-align: left;
+}
+
+#modalSpecial {
+    background: url(../img/modal-special_desk.webp)no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+#modalSpecial .pop-up__head {
+    font-size: 50px;
+    line-height: 52px;
+    text-align: left;
+}
+
+#modalSpecial .pop-up__sub-head {
+    font-size: 20px;
+    line-height: 22px;
+    text-transform: uppercase;
+    text-align: left;
+}
+
+#modalSuc {
+    background: url(../img/modal-sus_desk.webp)no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    height: 335px;
+}
+
+#modalSuc2 {
+    background: url(../img/modal-sus2_desk.webp)no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    height: 335px;
+}
+
+.fancybox__content>.f-button.is-close-btn {
+    top: 26px;
+    right: 38px;
+
+    width: 31px;
+    height: 31px;
+}
+
+.f-button svg {
+    width: 20px;
+    height: 20px;
+}
+
+#modalSuc .pop-up__head,
+#modalSuc2 .pop-up__head {
+    font-size: 50px;
+    line-height: 52px;
+}
+
+#modalSuc .pop-up__sub-head,
+#modalSuc2 .pop-up__sub-head {
+    font-size: 40px;
+    line-height: 42px;
+}
+
+#modalSuc2 .pop-up__head {
+    width: 593px;
+    margin: 0 auto;
+}
+
+#modalSuc2 .pop-up__sub-head {
+    width: 699px;
+    margin: 0 auto;
+}
+
+#modalSuc .pop-up__sub-head {
+    width: 588px;
+    margin: 0 auto;
+}
+
+#modalSuc .pop-up__info {
+    gap: 19px;
+}
+
+#modalSuc2 .pop-up__info {
+    gap: 7px;
+}
+
+.pop-up__list {
+    margin-top: 20px;
+
+    padding: 9px 0 13px 13px;
+
+    width: max-content;
+}
+
+.pop-up__list-item {
+    font-size: 15px;
+    line-height: 17px;
+
+    gap: 2px;
+}
+
+.pop-up__form {
+    margin-top: 19px;
+
+    width: 292px;
+}
+
+.pop-up__form-inputs {
+    gap: 8px;
+}
+
+.pop-up__form-input {
+    height: 42px;
+
+    padding-left: 12px;
+
+    font-size: 20px;
+    line-height: 22px;
+}
+
+.pop-up__form-input::placeholder {
+    font-size: 20px;
+    line-height: 22px;
+}
+
+.pop-up__form-button {
+    margin-top: 15px;
+
+    height: 46px;
+
+    font-size: 25px;
+    line-height: 27px;
+}
+
+.checkbox-text {
+    font-size: 14px;
+    line-height: 16px;
+}
+
+.pop-up .checkbox-text,
+.pop-up .checkbox-text a {
+    color: var(--color-black);
+}
+
+/*___________________________________*/
+
+@media screen and (max-width: 1750px) {
+    .main-banner__img img {
+        max-width: 700px;
+    }
+}
+
+@media screen and (max-width: 1600px) {
+    .container {
+        margin-left: calc(35% - 361px);
+    }
+
+    .container-custom,
+    .equipment__container,
+    .contacts__container {
+        margin-left: calc(35% - 361px);
+    }
+
+    .banner__head {
+        font-size: 22px;
+        line-height: 24px;
+    }
+
+    .banner__list-item {
+        font-size: 19px;
+        line-height: 21px;
+    }
+}
+
+@media screen and (max-width: 1400px) {
+    .container {
+        max-width: 1140px;
+    }
+
+    .header__line {
+        width: calc(92% + 15px);
+    }
+
+    .main-banner__title {
+        font-size: 32px;
+        line-height: 34px;
+    }
+
+    .time-count__val {
+        font-size: 45px;
+        line-height: 47px;
+    }
+
+    .time-count__text {
+        font-size: 14px;
+        line-height: 16px;
+    }
+
+    .main-banner__info {
+        width: 400px;
+    }
+
+    .main-banner__form-button {
+        font-size: 21px;
+        line-height: 23px;
+    }
+
+    .main-banner__discount {
+        width: 400px;
+        font-size: 36px;
+        line-height: 38px;
+    }
+
+    .main-banner__img {
+        bottom: 70px;
+    }
+
+    .main-banner__img img {
+        max-width: 500px;
+    }
+
+    .main-banner__actions-cont::before {
+        width: 640px;
+    }
+
+    .models__card-item {
+        font-size: 20px;
+        line-height: 22px;
+    }
+}
+
+@media screen and (max-width: 1280px) {
+    .container {
+        max-width: 960px;
+
+        margin-left: calc(40% - 352px);
+    }
+
+    .container-custom,
+    .equipment__container,
+    .contacts__container {
+        margin-left: calc(40% - 352px);
+    }
+
+    .header__menu {
+        flex-basis: 56%;
+    }
+
+    .header__nav-link {
+        font-size: 14px;
+        line-height: 16px;
+    }
+
+    .header__btn {
+        flex-basis: 16%;
+    }
+
+    .header__info-item {
+        font-size: 14px;
+        line-height: 16px;
+    }
+
+    .main-banner {
+        padding-top: 130px;
+    }
+
+    .header__container {
+        padding: 15px 0;
+    }
+
+    .main-banner__info {
+        width: 355px;
+    }
+
+    .main-banner__img img {
+        max-width: 445px;
+    }
+
+    .main-banner__actions-cont::before {
+        width: 590px;
+    }
+
+    .models__card-img {
+        max-width: 405px;
+    }
+
+    .models__card-credit {
+        top: 69px;
+    }
+
+    .models__card-price {
+        font-size: 24px;
+        line-height: 26px;
+    }
+
+    .models__card-price::before {
+        width: 218px;
+    }
+
+    .models__card-link {
+        font-size: 20px;
+        line-height: 22px;
+        margin: 15px 0 20px;
+    }
+
+    .section__title {
+        font-size: 65px;
+        line-height: 67px;
+    }
+
+    .container-custom {
+        padding: 20px 0 20px 20px;
+    }
+
+    .models__card-flex {
+        padding-left: 20px;
+
+        align-items: unset;
+    }
+
+    .models__card-head {
+        font-size: 40px;
+        line-height: 42px;
+    }
+
+    .models__card-car::before {
+        left: 70px;
+    }
+
+    .equipment__flex {
+        padding-left: 20px;
+    }
+
+    .equipment__car-img img {
+        max-width: 480px;
+    }
+
+    .equipment__info {
+        flex-basis: 40%;
+    }
+
+    .banner__head {
+        font-size: 19px;
+        line-height: 21px;
+    }
+
+    .banner__list-item {
+        font-size: 17px;
+        line-height: 19px;
+    }
+
+    .banner__form {
+        width: 400px;
+    }
+
+    .contacts__info {
+        padding: 32px 0 32px 20px;
+    }
 }
